1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (OBJCLIBS): Don't substitute (use local -lobjc).

1999-02-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* protocol.el (generate-expanded-methodinfo-list[s]): Add uniquify 
	flag.
	(load-and-process-modules): Add uniquify method-lists key.

1999-02-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* protocol.el (generate-expanded-methodinfo-list): Use method
	string signatures to key of method-hash-table instead of 
	method objects.  Replace methods only if level is higher.

1999-02-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* protocol.el: Augment load-path from TOP_BUILDDIR instead of
	SWARMDOCS_BUILD_AREA.

	* common.el (get-top-builddir): Renamed from
	get-swarmdocs-build-area.  Expect TOP_BUILDDIR instead of
	SWARMDOCS_BUILD_AREA environment variable.
	(get-builddir): New function, reads from BUILDDIR environment
	variable.

	* protocol.el: Add TOP_BUILDDIR to load path
	(compile time and load time). 

	* protocol.el: Require common and cc-mode.

	* common.el: Require cl and provide common.
	(get-swarmsrcdir): Typo in command-line-args length comparision.

1999-02-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add common.el and protocol.el.

	* common.el: New files, moved from swarmdocs.

	* protocol.el: New file, input-code from swarmdocs protocol.el.

1999-02-15  Alex Lancaster  <alex@santafe.edu>

	* Makefile.lib.in (SWARMINCLUDES): Replaces INCLUDES.

1999-02-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.common.in (HDF5LDFLAGS): Substitute.

1999-01-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.rules: New file.

	* Makefile.tests.in: Compute INCLUDES and SWARMBUILDLDFLAGS from
	SWARMMODULES.  Set LDFLAGS to SWARMBUILDLDFLAGS and SUPPORTFLAGS.
	Set LIBS to SWARMLIBS, SYSLIBS and @LIBS@. 
	Delete everything else. 
	(SWARMBUILDLDFLAGS): Add -rpath for each -L.
